update latest code.

--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -599,10 +599,16 @@
                     </div>
                   </div>
                 </div>
-                
+              </div>
+              <div class="row m-1 mt-0 stats-count">
+                <figure class="highcharts-figure">
+                  <div id="rankWiseDiscussion"></div>
+                </figure>
               </div>
               <div class="container-fluid">
-              <div style="border-bottom: 2px solid #d9dee3 !important;">&nbsp;</div>
+                <div style="border-bottom: 2px solid #d9dee3 !important">
+                  &nbsp;
+                </div>
             </div>
               <div class="row m-1 mt-0 stats-count">
                 <div
@@ -717,7 +723,9 @@
                         class="d-flex align-items-center justify-content-between"
                       >
                         <div class="content-left">
-                          <h3 class="mb-0"><span id="ContractExtension"></span></h3>
+                          <h3 class="mb-0">
+                            <span id="ContractExtension"></span>
+                          </h3>
                           <small>Contract Extension</small>
                         </div>
                         <span class="badge bg-label-info rounded-circle p-2">
@@ -805,6 +813,7 @@
     <script src="../assets/vendor/libs/popper/popper.js"></script>
     <script src="../assets/vendor/js/bootstrap.js"></script>
     <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
@@ -827,7 +836,6 @@
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
-    <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
