--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -745,6 +745,18 @@
                                             
                                               <div class="col">
                                                 <label for="basic_comments" class="form-label" >Comments  <textarea  name="basic_comments" id="basic_comments" cols="30" rows="10" class="form-control"></textarea> </label>
+
+                                                <div class="col-md-12">
+                                                  <div class="mb-3">
+                                                      <label for="discussionconnected" class="form-label">Connected Status</label>
+                                                      <select class="form-select" id="discussionconnected" name="discussionconnected">
+                                                          <option value="">Select Connected Status</option>
+                                                          <option value="Yes">Connected</option>
+                                                          <option value="No">Not Connected</option>
+                                                      </select>
+                                                  </div>
+                                              </div>
+
                                               </div>
                                               <div class="col-md-6 mt-md-0 mt-2">
                                                   <div class="form-check">
