--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -777,6 +777,17 @@
                 </figure>
               </div>
 
+              <div class="row m-1 mt-0 stats-count">
+                <table id="resultTable">
+                  <thead>
+                    <tr id="rankHeader">
+                      <th>Username</th>
+                    </tr>
+                  </thead>
+                  <tbody></tbody>
+                </table>
+              </div>
+
               <div class="container-fluid">
                 <h4 class="ms-0 mt-3 text-white">Todays All Discussions</h4>
 
