--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -66,11 +66,13 @@
       .handsymb {
         cursor: pointer;
       }
+      .bar-wrapper {
+        display: flex;
+      }
       .bar {
       display: inline-block;
-      width: 20px;
+      width: 80px;
       height: 20px;
-      margin-right: 2px;
       text-align: center;
       color: white;
       font-size: 14px;
