--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -80,11 +80,10 @@
       line-height: 20px;
     }
     .yes {
-      background-color: #4A90E2; /* Blue */
+      background-color: #008000;
     }
     .no {
-      background-color: #F5A623; /* Yellow */
-      color: black;
+      background-color: #C4A484;
     }
     </style>
 
