--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -795,7 +795,8 @@
                   <div id="rankWiseDiscussion"></div>
                 </figure>
               </div>
-
+              <div class="container-fluid">
+              <h4 class="ms-0 mt-3 text-white">Todays All Discussions</h4>
               <div class="card mt-3 col m-3 rounded-3">
                 <div class="table-responsive">
                 <table id="resultTable" class="table table-bordered table table-min-height">
@@ -808,9 +809,10 @@
                 </table>
               </div>
               </div>
+              </div>
 
               <div class="container-fluid">
-                <h4 class="ms-0 mt-3 text-white">Todays All Discussions</h4>
+                <h4 class="ms-0 mt-3 text-white">User & Rank Wise Calls Made</h4>
 
                 <ul
                   id="discussionList"
