--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -70,21 +70,21 @@
         display: flex;
       }
       .bar {
-      display: inline-block;
-      width: 80px;
-      height: 20px;
-      text-align: center;
-      color: white;
-      font-size: 14px;
-      font-weight: bold;
-      line-height: 20px;
-    }
-    .yes {
-      background-color: #008000;
-    }
-    .no {
-      background-color: #C4A484;
-    }
+        display: inline-block;
+        width: 80px;
+        height: 20px;
+        text-align: center;
+        color: white;
+        font-size: 14px;
+        font-weight: bold;
+        line-height: 20px;
+      }
+      .yes {
+        background-color: #008000;
+      }
+      .no {
+        background-color: #c4a484;
+      }
     </style>
 
     <!-- Fonts -->
@@ -623,7 +623,7 @@
                 <div style="border-bottom: 2px solid #d9dee3 !important">
                   &nbsp;
                 </div>
-            </div>
+              </div>
               <div class="row m-1 mt-0 stats-count">
                 <div
                   class="col-sm-6 col-xl-3 handsymb"
@@ -795,20 +795,22 @@
                   <div id="rankWiseDiscussion"></div>
                 </figure>
               </div>
-              <div class="container-fluid">
-              <h4 class="ms-0 mt-3 text-white">User & Rank Wise Calls Made</h4>
+
               <div class="card mt-3 col m-3 rounded-3">
+                <h4 class="ms-2 mt-3">User &amp; Rank Wise Calls Made</h4>
                 <div class="table-responsive">
-                <table id="resultTable" class="table table-bordered table table-min-height">
-                  <thead>
-                    <tr id="rankHeader">
-                      <th>Username</th>
-                    </tr>
-                  </thead>
-                  <tbody></tbody>
-                </table>
-              </div>
-              </div>
+                  <table
+                    id="resultTable"
+                    class="table table-bordered table table-min-height"
+                  >
+                    <thead>
+                      <tr id="rankHeader">
+                        <th>User</th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
+                </div>
               </div>
 
               <div class="container-fluid">
