--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -812,6 +812,11 @@
                   </table>
                 </div>
               </div>
+              <div class="row m-1 mt-0 stats-count">
+                <figure class="highcharts-figure">
+                  <div id="availableCandidate"></div>
+                </figure>
+              </div>
 
               <div class="container-fluid">
                 <h4 class="ms-0 mt-3 text-white">Todays All Discussions</h4>
