resolve view application issue.

--- a/views/public/html/viewapplicationform.html
+++ b/views/public/html/viewapplicationform.html
@@ -239,7 +239,7 @@
               <!-- /Logo -->
               <form id="login-form" class="mb-3">
                 <div class="mb-3">
-                  <input readonly
+                  <input 
                     type="text"
                     class="form-control"
                     id="user_id"
