--- a/views/public/html/ownerreport.html
+++ b/views/public/html/ownerreport.html
@@ -422,7 +422,6 @@
                     <tr>
                       <th style="font-size: 8px;">S.no</th>
                         <th style="font-size: 8px;">Name</th>
-                        <th style="font-size: 8px;">Last&nbsp;Name</th>
                         <th style="font-size: 8px;">Birth&nbsp;place</th>
                         <th style="font-size: 8px;">Rank</th>
                         <th style="font-size: 8px;">Nationality</th>
@@ -481,6 +480,7 @@
       <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
   
       <script src="../assets/vendor/js/menu.js"></script>
+      <script src="../assets/js/helper.js"></script>
       <!-- endbuild -->
   
       <!-- Vendors JS -->
