--- a/views/public/html/ownerviewcandidate.html
+++ b/views/public/html/ownerviewcandidate.html
@@ -298,7 +298,7 @@
                                 <!-- Add your candidate information display here -->
                                 <div id="contentContainer" class="btn-group d-flex flex-wrap justify-content-center">
                                   <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('personal')">Personal</button>
-                                  <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('discussion')">Discussion</button>
+                                  <!-- <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('discussion')">Discussion</button> -->
                                   <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('contract')">Contract</button>
                                   <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('document')">Document</button>
                                   <button type="button" class=" border border-1 border-white btn btn-primary mb-2" onclick="loadContent('bank')">Bank</button>
