--- a/views/public/html/ownerreport.html
+++ b/views/public/html/ownerreport.html
@@ -421,6 +421,7 @@
                 <thead>
                     <tr>
                       <th style="font-size: 8px;">S.no</th>
+                        <th style="font-size: 8px;">Nemo ID</th>
                         <th style="font-size: 8px;">Name</th>
                         <th style="font-size: 8px;">Birth&nbsp;place</th>
                         <th style="font-size: 8px;">Rank</th>
