--- a/views/public/html/ownerviewcandidate.html
+++ b/views/public/html/ownerviewcandidate.html
@@ -290,7 +290,8 @@
                     <div class="m-4">
                         <div class="card">
                             <div class="card-body">
-                              <h5 class="text-primary">View Candidate</h5>
+                              <h5 class="text-primary">View Candidate</h5><br/>
+                              <h5 class="text-primary">Nemo ID: <span id="nemoID"></span></h5>
                               <small class="text-dark">Click on the Heading to View Candidate Details</small>
 
                               <!-- <div class="btn btn-primary mb-3">View Candidate </div>                               <span class="float-end ms-3 badge bg-secondary p-2"> Edited By : <span id="editor" class=" "></span></span>
