--- a/views/public/html/ownerviewcandidate.html
+++ b/views/public/html/ownerviewcandidate.html
@@ -291,7 +291,6 @@
                         <div class="card">
                             <div class="card-body">
                               <h5 class="text-primary">View Candidate</h5>
-                              <h5 class="text-primary">Nemo ID: <span id="nemoID"></span></h5>
                               <small class="text-dark">Click on the Heading to View Candidate Details</small>
 
                               <!-- <div class="btn btn-primary mb-3">View Candidate </div>                               <span class="float-end ms-3 badge bg-secondary p-2"> Edited By : <span id="editor" class=" "></span></span>
@@ -318,8 +317,13 @@
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
                                         <div  >
                                           <!-- No need for the hidden input here -->
-                                          <div id="imageContainer" class="d-flex justify-content-center">
+                                          <div id="imageContainer" style="float: right;">
                                               <img src="" alt=" &nbsp;No Photo present for the candidate" class="rounded-2 shadow-sm" style="width: 100px;height: auto;">
+                                              <div id="nemoID" style="clear: both;
+    text-align: center;
+    margin-top: 10px;
+    color: #008e9c;
+    font-weight: bold;"></div>
                                           </div>
                                       </div>
                                       
