--- a/views/public/html/ownerviewcandidate.html
+++ b/views/public/html/ownerviewcandidate.html
@@ -319,11 +319,11 @@
                                           <!-- No need for the hidden input here -->
                                           <div id="imageContainer" style="float: right;">
                                               <img src="" alt=" &nbsp;No Photo present for the candidate" class="rounded-2 shadow-sm" style="width: 100px;height: auto;">
-                                              <div id="nemoID" style="clear: both;
+                                              <div  style="clear: both;
     text-align: center;
     margin-top: 10px;
     color: #008e9c;
-    font-weight: bold;"></div>
+    font-weight: bold;">Nemo ID <span id="nemoID"></span></div>
                                           </div>
                                       </div>
                                       
