--- a/views/public/html/ownerviewcandidate.html
+++ b/views/public/html/ownerviewcandidate.html
@@ -323,7 +323,7 @@
     text-align: center;
     margin-top: 10px;
     color: #008e9c;
-    font-weight: bold;">Nemo ID <span id="nemoID"></span></div>
+    font-weight: bold;">Nemo ID: <span id="nemoID"></span></div>
                                           </div>
                                       </div>
                                       
