implement upload extension contract

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1148,8 +1148,7 @@
                                     <th scope="col">AOA&nbsp;Number</th>
                                     <th scope="col">Emigrate&nbsp;Number</th>
                                     <th scope="col">Document</th>
-                                    <th scope="col">Document</th>
-                                    <th scope="col">AOA</th>
+                                    <th scope="col">Extension Document</th>
                                     <th scope="col">AOA</th>
                                     <th scope="col">openingBalance</th>
                                     <th scope="col">basicWages</th>
