--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -790,6 +790,11 @@
                                     <label>Previous Document Uploaded</label>
 
                                     <input name="doc" disabled type="" id="prevDoc" class="form-control"/>
+                                    <div id="extDoc" style="display: none; background-color: #eceef1;
+    border: 1px solid #d9dee3;
+    padding: 5px;
+    margin-top: 10px;
+    border-radius: 5px;"></div>
                                       </div>
 
                                       <div class="form-floating">
