--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -652,13 +652,13 @@
                                       <div class="row mb-3">
                                           <div class="col-md-6">
                                               <label for="rank" class="form-label">Select Rank</label>
-                                              <select id="rank" class="form-select" >
+                                              <select id="rank" class="form-select select-dropdown" >
                                                   <!-- Options will be dynamically added using JavaScript -->
                                               </select>
                                           </div>
                                           <div class="col-md-6">
                                               <label for="vessel_types" class="form-label">Select Vessel</label>
-                                              <select id="vessel_types" class="form-select" >
+                                              <select id="vessel_types" class="form-select select-dropdown" >
                                                   <!-- Options will be dynamically added using JavaScript -->
                                               </select>
                                           </div>
@@ -666,14 +666,14 @@
                                       <div class="row mb-3">
                                           <div class="col-md-6 mt-0">
                                               <label for="status" class="form-label">Status</label>
-                                              <select id="status" name="status" class="form-select" >
+                                              <select id="status" name="status" class="form-select select-dropdown" >
                                                   <option value="1">Active</option>
                                                   <option value="0">Inactive</option>
                                               </select>
                                           </div>
                                           <div class="col-md-6">
                                               <label for="reemploymentStatus" class="form-label">Re-Employment</label>
-                                              <select id="reemploymentStatus" name="reemploymentStatus" class="form-select">
+                                              <select id="reemploymentStatus" name="reemploymentStatus" class="form-select select-dropdown">
                                                   <option value="" default selected disabled>-- Select NTBR --</option>
                                                   <option value="0">Not to be re-employed by Nautilus</option>
                                                   <option value="1">Not to be re-employed by the owners/clients</option>
@@ -727,7 +727,7 @@
                                       <div class="col-md-6">
                                           <div class="mb-3" id="companyDropdown" style="display: none;">
                                               <label for="company_name" class="form-label">Company Name</label>
-                                              <select class="form-select" id="company_name" name="company_name">
+                                              <select class="form-select select-dropdown" id="company_name" name="company_name">
                                                   <option value="">Select Company</option>
                                                   <!-- Add options here -->
                                               </select>
@@ -757,7 +757,7 @@
                                                 <div class="col-md-12">
                                                   <div class="mb-3">
                                                       <label for="discussionconnected" class="form-label">Connected Status</label>
-                                                      <select class="form-select" id="discussionconnected" name="discussionconnected">
+                                                      <select class="form-select select-dropdown" id="discussionconnected" name="discussionconnected">
                                                           <option value="">Select Connected Status</option>
                                                           <option value="Yes">Connected</option>
                                                           <option value="No">Not Connected</option>
