--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -95,6 +95,10 @@
 .select2 {
         width: 100% !important;
       }
+      .select2-container .select2-selection--single {
+            height: 40px;
+          padding-top: 5px;
+      }
 
 
 </style>
