--- a/views/public/html/add-c-medicals.html
+++ b/views/public/html/add-c-medicals.html
@@ -64,6 +64,10 @@
 
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Core CSS -->
     <link rel="stylesheet" href="../assets/vendor/css/core.css" class="template-customizer-core-css" />
@@ -81,6 +85,28 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../assets/js/config.js"></script>
+    <style>
+      .select2 {
+        width: 100% !important;
+      }
+      .select2-container--default .select2-selection--single {
+        height: 57px; /* Adjust this height based on your native select element */
+        line-height: 57px; /* Adjust this line-height to match the text vertically in the middle */
+        border-radius: 0.25rem; /* Adjust border radius if needed */
+      }
+
+      .select2-container--default
+        .select2-selection--single
+        .select2-selection__rendered {
+        line-height: 57px; /* Adjust this if needed */
+      }
+
+      .select2-container--default
+        .select2-selection--single
+        .select2-selection__arrow {
+        height: 57px; /* Adjust this to match the height */
+      }
+    </style>
   </head>
 
 <body>
@@ -646,7 +672,7 @@
                           <form  id="medicalForm" class="">
                               <div class=" col mb-3">
                                   <label for="hospital_name" class="form-label">Hospital Name</label>
-                                  <select id="hospital_name" class="form-select" required>
+                                  <select id="hospital_name" class="form-select select-dropdown" required>
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
                               </div>
@@ -741,7 +767,7 @@
     <script src="../assets/vendor/libs/popper/popper.js"></script>
     <script src="../assets/vendor/js/bootstrap.js"></script>
     <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-
+     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
