--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -92,12 +92,22 @@
     font-size: 12px;
     color: #555;
 }
-.select2 {
-        width: 100% !important;
+.select2-container--default .select2-selection--single {
+        height: 57px; /* Adjust this height based on your native select element */
+        line-height: 57px; /* Adjust this line-height to match the text vertically in the middle */
+        border-radius: 0.25rem; /* Adjust border radius if needed */
       }
-      .select2-container .select2-selection--single {
-            height: 40px;
-          padding-top: 5px;
+
+      .select2-container--default
+        .select2-selection--single
+        .select2-selection__rendered {
+        line-height: 57px; /* Adjust this if needed */
+      }
+
+      .select2-container--default
+        .select2-selection--single
+        .select2-selection__arrow {
+        height: 57px; /* Adjust this to match the height */
       }
 
 
